# SerenityBot

./: .env.dev  .gitignore  Cargo.toml  config.toml
src/: alerts.rs  commands.rs  config.rs  db.rs  main.rs  utils.rs
src/commands/: fun.rs  info.rs  mod.rs  roles.rs
