[package]
name = "discord_bot"
version = "0.1.0"
edition = "2024"

[profile.opt_heavy]
lto = true
codegen-units = 1
strip = true
inherits = "release"

[dependencies]
dotenvy = "0.15.7"
poise = "0.6.1"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.22"
