[package]
name = "discord_bot"
version = "0.1.0"
edition = "2024"

[profile.opt_heavy]
lto = true
codegen-units = 1
strip = true
inherits = "release"

[dependencies]
chrono = "0.4.42"
dotenvy = "0.15.7"
hotwatch = "0.5.0"
levenshtein = "1.0.5"
poise = "0.6.1"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
